@@ -71,20 +71,19 @@ cluster_stop() {
 download_and_prepare_rw "$profile" common
 
 echo "--- Download artifacts"
-download-and-decompress-artifact e2e_test_generated ./
+# preparing for external java udf tests
+mkdir -p e2e_test/udf/java/target/
+buildkite-agent artifact download udf.jar e2e_test/udf/java/target/
+# preparing for extended mode tests
 download-and-decompress-artifact risingwave_e2e_extended_mode_test-"$profile" target/debug/
-mkdir -p e2e_test/udf/wasm/target/wasm32-wasi/release/
-buildkite-agent artifact download udf.wasm e2e_test/udf/wasm/target/wasm32-wasi/release/
-buildkite-agent artifact download udf.jar ./
 mv target/debug/risingwave_e2e_extended_mode_test-"$profile" target/debug/risingwave_e2e_extended_mode_test
-
 chmod +x ./target/debug/risingwave_e2e_extended_mode_test
 
 echo "--- e2e, $mode, streaming"
 RUST_LOG="info,risingwave_stream=info,risingwave_batch=info,risingwave_storage=info,risingwave_stream::common::table::state_table=warn" \
 cluster_start
 # Please make sure the regression is expected before increasing the timeout.
-sqllogictest -p 4566 -d dev './e2e_test/streaming/**/*.slt' --junit "streaming-${profile}"
+risedev slt -p 4566 -d dev './e2e_test/streaming/**/*.slt' --junit "streaming-${profile}"
 sqllogictest -p 4566 -d dev './e2e_test/backfill/sink/different_pk_and_dist_key.slt'
 
 echo "--- Kill cluster"
@@ -117,37 +116,9 @@ python3 ./e2e_test/subscription/main.py
 echo "--- e2e, $mode, Apache Superset"
 sqllogictest -p 4566 -d dev './e2e_test/superset/*.slt' --junit "batch-${profile}"
 
-echo "--- e2e, $mode, external python udf"
-python3 -m pip install --break-system-packages arrow-udf==0.2.1
-python3 e2e_test/udf/test.py &
-sleep 1
-sqllogictest -p 4566 -d dev './e2e_test/udf/external_udf.slt'
-pkill python3
-
-sqllogictest -p 4566 -d dev './e2e_test/udf/alter_function.slt'
-sqllogictest -p 4566 -d dev './e2e_test/udf/graceful_shutdown_python.slt'
-# FIXME: flaky test
-# sqllogictest -p 4566 -d dev './e2e_test/udf/retry_python.slt'
-
-echo "--- e2e, $mode, external java udf"
-java --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED -jar udf.jar &
-sleep 1
-sqllogictest -p 4566 -d dev './e2e_test/udf/external_udf.slt'
-pkill java
-
-echo "--- e2e, $mode, embedded udf"
-sqllogictest -p 4566 -d dev './e2e_test/udf/wasm_udf.slt'
-sqllogictest -p 4566 -d dev './e2e_test/udf/rust_udf.slt'
-sqllogictest -p 4566 -d dev './e2e_test/udf/js_udf.slt'
-sqllogictest -p 4566 -d dev './e2e_test/udf/python_udf.slt'
-
-echo "--- Kill cluster"
-cluster_stop
-
-echo "--- e2e, $mode, generated"
-RUST_LOG="info,risingwave_stream=info,risingwave_batch=info,risingwave_storage=info" \
-cluster_start
-sqllogictest -p 4566 -d dev './e2e_test/generated/**/*.slt' --junit "generated-${profile}"
+echo "--- e2e, $mode, external udf"
+python3 -m pip install --break-system-packages arrow-udf==0.3.0
+risedev slt -p 4566 -d dev './e2e_test/udf/external/main.slt'
 
 echo "--- Kill cluster"
 cluster_stop
